--- a/src/App.css
+++ b/src/App.css
@@ -15,29 +15,34 @@ body {
 .navbar-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 80px;
   width: 100%;
   max-width: 1000px;
   padding: 0 20px;
 }
 
-.navbar-logo {
-  color: #fff;
-  justify-self: start;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
+.navbar-left {
   display: flex;
   align-items: center;
 }
 
 .react-logo {
-  display: flex;
-  justify-self: start;
+  height: 100px;
+  width: 100px;
+  margin-right: 10px;
+  fill: #fff; /* Adjust color if needed */
+}
+
+.navbar-logo {
+  color: #fff;
+  text-decoration: none;
+  font-size: 4rem;
 }
 
 .menu-icon {
   display: none;
+  justify-content: flex-start;
 }
 
 .nav-menu {
@@ -63,6 +68,10 @@ body {
 .nav-links:hover {
   background-color: #575757;
   border-radius: 4px;
+}
+
+.page-content {
+  margin-left: 10%;
 }
 
 @media screen and (max-width: 960px) {
